--- a/v2popup.css
+++ b/v2popup.css
@@ -1,3 +1,5 @@
+/* CORRECT POSITION */ 
+
 .container_button {
   display: flex;
   position: fixed;
@@ -23,7 +25,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0 20px 0 0;
+  margin: 0 25px 0 0;
 }
 
 .container_button-content-text {
@@ -49,7 +51,7 @@
   line-height: 21px;
   color: #29313D;
   text-align: left;
-  margin: 0 50px 0 0;
+  margin: 0 30px 0 0;
 }
 
 .container_button-image {
@@ -58,7 +60,8 @@
 }
 
 .container_close-btn {
-  margin: 26px 6px 75px 0;
+  margin: 26px 0 75px 0;
+  z-index: 3;
 }
 
 @media screen and (max-width: 1736px) {
@@ -108,6 +111,347 @@
 }
 @media screen and (max-width: 800px) {
   .container_button {
+    display: none;
+  }
+}
+
+/* V2 */ 
+ 
+.container_button2 {
+  display: flex;
+  background-color: #ffffff;
+  width: 360px;
+  height: 115px;
+  border: 1px solid #e1e5eb;
+  border-radius: 6px;
+  padding: 0;
+  text-decoration: none;
+}
+
+.container_button-left_bar2 {
+  height: 100%;
+  width: 10px;
+  background: #2FC18C;
+  border-radius: 6px 0px 0px 6px;
+}
+
+.container_button-content2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 25px 0 0;
+}
+
+.container_button-content-text2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.container_button-title2 {
+  font-family: Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  margin: 0 0 8px 0;
+  color: #29313D;
+  text-align: left;
+}
+
+.container_button-text2 {
+  font-family: Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #29313D;
+  text-align: left;
+  margin: 0 30px 0 0;
+}
+
+.container_button-image2 {
+  margin: 12px 12px 62px 12px;
+  height: 32px;
+}
+
+.container_close-btn2 {
+  margin: 26px 0 75px 0;
+  z-index: 3;
+}
+
+@media screen and (max-width: 1736px) {
+  .container_button2 {
+    left: 73%;
+  }
+}
+@media screen and (max-width: 1622px) {
+  .container_button2 {
+    left: 70%;
+  }
+}
+@media screen and (max-width: 1452px) {
+  .container_button2 {
+    left: 65%;
+  }
+}
+@media screen and (max-width: 1242px) {
+  .container_button2 {
+    left: 62%;
+  }
+}
+@media screen and (max-width: 1141px) {
+  .container_button2 {
+    left: 60%;
+  }
+}
+@media screen and (max-width: 1082px) {
+  .container_button2 {
+    left: 55%;
+  }
+}
+@media screen and (max-width: 968px) {
+  .container_button2 {
+    left: 53%;
+  }
+}
+@media screen and (max-width: 918px) {
+  .container_button2 {
+    left: 50%;
+  }
+}
+@media screen and (max-width: 871px) {
+  .container_button2 {
+    left: 45%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .container_button2 {
+    display: none;
+  }
+}
+
+/* V3 */ 
+  .container_button3 {
+    display: flex;
+    background-color: #ffffff;
+    width: 360px;
+    height: 115px;
+    border: 1px solid #e1e5eb;
+    border-radius: 6px;
+    padding: 0;
+    text-decoration: none;
+  }
+  
+  .container_button-left_bar3 {
+    height: 100%;
+    width: 10px;
+    background: #2FC18C;
+    border-radius: 6px 0px 0px 6px;
+  }
+  
+  .container_button-content3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 25px 0 0;
+  }
+  
+  .container_button-content-text3 {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .container_button-title3 {
+    font-family: Verdana, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    margin: 0 0 8px 0;
+    color: #29313D;
+    text-align: left;
+  }
+  
+  .container_button-text3 {
+    font-family: Verdana, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    color: #29313D;
+    text-align: left;
+    margin: 0 30px 0 0;
+  }
+  
+  .container_button-image3 {
+    margin: 12px 12px 62px 12px;
+    height: 32px;
+  }
+  
+  .container_close-btn3 {
+    margin: 26px 0 75px 0;
+    z-index: 3;
+  }
+  
+  @media screen and (max-width: 1736px) {
+    .container_button3 {
+      left: 73%;
+    }
+  }
+  @media screen and (max-width: 1622px) {
+    .container_button3 {
+      left: 70%;
+    }
+  }
+  @media screen and (max-width: 1452px) {
+    .container_button3 {
+      left: 65%;
+    }
+  }
+  @media screen and (max-width: 1242px) {
+    .container_button3 {
+      left: 62%;
+    }
+  }
+  @media screen and (max-width: 1141px) {
+    .container_button3 {
+      left: 60%;
+    }
+  }
+  @media screen and (max-width: 1082px) {
+    .container_button3 {
+      left: 55%;
+    }
+  }
+  @media screen and (max-width: 968px) {
+    .container_button3 {
+      left: 53%;
+    }
+  }
+  @media screen and (max-width: 918px) {
+    .container_button3 {
+      left: 50%;
+    }
+  }
+  @media screen and (max-width: 871px) {
+    .container_button3 {
+      left: 45%;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .container_button3 {
+      display: none;
+    }
+  }
+
+/* V4 */
+
+.container_button4 {
+  display: flex;
+  background-color: #ffffff;
+  width: 360px;
+  height: 115px;
+  border: 1px solid #e1e5eb;
+  border-radius: 6px;
+  padding: 0;
+  text-decoration: none;
+}
+
+.container_button-left_bar4 {
+  height: 100%;
+  width: 10px;
+  background: #2FC18C;
+  border-radius: 6px 0px 0px 6px;
+}
+
+.container_button-content4 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 25px 0 0;
+}
+
+.container_button-content-text4 {
+  display: flex;
+  flex-direction: column;
+}
+
+.container_button-title4 {
+  font-family: Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  margin: 0 0 8px 0;
+  color: #29313D;
+  text-align: left;
+}
+
+.container_button-text4 {
+  font-family: Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #29313D;
+  text-align: left;
+  margin: 0 30px 0 0;
+}
+
+.container_button-image4 {
+  margin: 12px 12px 62px 12px;
+  height: 32px;
+}
+
+.container_close-btn4 {
+  margin: 26px 0 75px 0;
+  z-index: 3;
+}
+
+@media screen and (max-width: 1736px) {
+  .container_button4 {
+    left: 73%;
+  }
+}
+@media screen and (max-width: 1622px) {
+  .container_button4 {
+    left: 70%;
+  }
+}
+@media screen and (max-width: 1452px) {
+  .container_button4 {
+    left: 65%;
+  }
+}
+@media screen and (max-width: 1242px) {
+  .container_button4 {
+    left: 62%;
+  }
+}
+@media screen and (max-width: 1141px) {
+  .container_button4 {
+    left: 60%;
+  }
+}
+@media screen and (max-width: 1082px) {
+  .container_button4 {
+    left: 55%;
+  }
+}
+@media screen and (max-width: 968px) {
+  .container_button4 {
+    left: 53%;
+  }
+}
+@media screen and (max-width: 918px) {
+  .container_button4 {
+    left: 50%;
+  }
+}
+@media screen and (max-width: 871px) {
+  .container_button4 {
+    left: 45%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .container_button4 {
     display: none;
   }
 }
